--- a/app/views/leave-feedback/check-your-answers.html
+++ b/app/views/leave-feedback/check-your-answers.html
@@ -33,7 +33,7 @@ Check your answers before sending your feedback — {{ serviceName }}
       rows: [
         {
           key: {
-            text: questions.data[0].text
+            text: "My child is happy at Greenwood High School"
           },
           value: {
             text: data["my-child-is-happy"]
@@ -41,7 +41,7 @@ Check your answers before sending your feedback — {{ serviceName }}
           actions: {
             items: [
               {
-                href: "/leave-feedback/questions/my-child-is-happy?edit=true",
+                href: "/leave-feedback/questions/my-child-is-happy?edit=true&multiple=true",
                 text: "Change",
                 visuallyHiddenText: "name"
               }
@@ -50,7 +50,7 @@ Check your answers before sending your feedback — {{ serviceName }}
         },
         {
           key: {
-            text: questions.data[1].text
+            text: "My child feels safe at Greenwood High School"
           },
           value: {
             text: data["my-child-feels-safe"]
@@ -58,7 +58,7 @@ Check your answers before sending your feedback — {{ serviceName }}
           actions: {
             items: [
               {
-                href: "/leave-feedback/questions/my-child-feels-safe?edit=true",
+                href: "/leave-feedback/questions/my-child-feels-safe?edit=true&multiple=true",
                 text: "Change",
                 visuallyHiddenText: "name"
               }
@@ -67,7 +67,7 @@ Check your answers before sending your feedback — {{ serviceName }}
         },
         {
           key: {
-            text: questions.data[2].text
+            text: "The school helps my child reach their full potential"
           },
           value: {
             text: data["my-child-can-reach-potential"]
@@ -75,7 +75,7 @@ Check your answers before sending your feedback — {{ serviceName }}
           actions: {
             items: [
               {
-                href: "/leave-feedback/questions/my-child-can-reach-potential?edit=true",
+                href: "/leave-feedback/questions/my-child-can-reach-potential?edit=true&multiple=true",
                 text: "Change",
                 visuallyHiddenText: "name"
               }
@@ -84,15 +84,15 @@ Check your answers before sending your feedback — {{ serviceName }}
         },
         {
         key: {
-          text: questions.data[3].text
+          text: "Does your child have special educational needs and/or disabilities (SEND)?"
         },
         value: {
-          text: data["school-makes-me-aware"]
+          text: data["does-child-have-send"]
         },
         actions: {
           items: [
             {
-              href: "/leave-feedback/questions/school-makes-me-aware?edit=true",
+              href: "/leave-feedback/questions/does-child-have-send?edit=true&multiple=true",
               text: "Change",
               visuallyHiddenText: "name"
             }
@@ -101,7 +101,7 @@ Check your answers before sending your feedback — {{ serviceName }}
         },
         {
           key: {
-            text: questions.data[4].text
+            text: "My child has SEND, and the school gives them the support they need to succeed."
           },
           value: {
             text: data["my-child-has-send"]
@@ -109,7 +109,7 @@ Check your answers before sending your feedback — {{ serviceName }}
           actions: {
             items: [
               {
-                href: "/leave-feedback/questions/my-child-has-send?edit=true",
+                href: "/leave-feedback/questions/my-child-has-send?edit=true&multiple=true",
                 text: "Change",
                 visuallyHiddenText: "name"
               }
@@ -118,15 +118,15 @@ Check your answers before sending your feedback — {{ serviceName }}
         },
         {
           key: {
-            text: questions.data[5].text
+            text: "The school is well led and managed"
           },
           value: {
-            text: data["school-staff-changes"]
+            text: data["school-well-managed"]
           },
           actions: {
             items: [
               {
-                href: "/leave-feedback/questions/school-staff-changes?edit=true",
+                href: "/leave-feedback/questions/school-well-managed?edit=true&multiple=true",
                 text: "Change",
                 visuallyHiddenText: "name"
               }
@@ -135,7 +135,24 @@ Check your answers before sending your feedback — {{ serviceName }}
         },
         {
           key: {
-            text: questions.data[6].text
+            text: "The school gives my child the opportunity to learn across a broad range of subjects"
+          },
+          value: {
+            text: data["broad-range-subjects"]
+          },
+          actions: {
+            items: [
+              {
+                href: "/leave-feedback/questions/broad-range-subjects?edit=true&multiple=true",
+                text: "Change",
+                visuallyHiddenText: "name"
+              }
+            ]
+          }
+        },
+        {
+          key: {
+            text: "My child has the opportunity to attend clubs and activities during lunchtime, or before or after school"
           },
           value: {
             text: data["school-extracurricular-interests"]
@@ -143,7 +160,7 @@ Check your answers before sending your feedback — {{ serviceName }}
           actions: {
             items: [
               {
-                href: "/leave-feedback/questions/school-extracurricular-interests?edit=true",
+                href: "/leave-feedback/questions/school-extracurricular-interests?edit=true&multiple=true",
                 text: "Change",
                 visuallyHiddenText: "name"
               }
@@ -152,7 +169,7 @@ Check your answers before sending your feedback — {{ serviceName }}
         },
         {
           key: {
-            text: questions.data[7].text
+            text: "My child’s school helps them develop as a person"
           },
           value: {
             text: data["my-child-life-skills"]
@@ -160,7 +177,7 @@ Check your answers before sending your feedback — {{ serviceName }}
           actions: {
             items: [
               {
-                href: "/leave-feedback/questions/my-child-life-skills?edit=true",
+                href: "/leave-feedback/questions/my-child-life-skills?edit=true&multiple=true",
                 text: "Change",
                 visuallyHiddenText: "name"
               }
@@ -169,7 +186,7 @@ Check your answers before sending your feedback — {{ serviceName }}
         },
         {
           key: {
-            text: questions.data[8].text
+            text: "My child’s school deals fairly with children's behaviour"
           },
           value: {
             text: explainedAnswer(data["school-behaviour-explain"], data["school-good-behaviour"])
@@ -177,7 +194,7 @@ Check your answers before sending your feedback — {{ serviceName }}
           actions: {
             items: [
               {
-                href: "/leave-feedback/questions/school-good-behaviour?edit=true",
+                href: "/leave-feedback/questions/school-good-behaviour?edit=true&multiple=true",
                 text: "Change",
                 visuallyHiddenText: "name"
               }
@@ -186,7 +203,7 @@ Check your answers before sending your feedback — {{ serviceName }}
         },
         {
           key: {
-            text: questions.data[9].text
+            text: "I’m confident that the school deals with bullying quickly and effectively"
           },
           value: {
             text: explainedAnswer(data["bullying-explain"], data["my-child-bullied"])
@@ -194,7 +211,7 @@ Check your answers before sending your feedback — {{ serviceName }}
           actions: {
             items: [
               {
-                href: "/leave-feedback/questions/my-child-bullied?edit=true",
+                href: "/leave-feedback/questions/my-child-bullied?edit=true&multiple=true",
                 text: "Change",
                 visuallyHiddenText: "name"
               }
@@ -203,24 +220,7 @@ Check your answers before sending your feedback — {{ serviceName }}
         },
         {
           key: {
-            text: questions.data[10].text
-          },
-          value: {
-            text: data["school-my-concerns"]
-          },
-          actions: {
-            items: [
-              {
-                href: "/leave-feedback/questions/school-my-concerns?edit=true",
-                text: "Change",
-                visuallyHiddenText: "name"
-              }
-            ]
-          }
-        },
-        {
-          key: {
-            text: questions.data[11].text
+            text: "The school keeps me updated about my child’s progress"
           },
           value: {
             text: explainedAnswer(data["school-updates-explain"], data["school-updates-me"])
@@ -228,7 +228,7 @@ Check your answers before sending your feedback — {{ serviceName }}
           actions: {
             items: [
               {
-                href: "/leave-feedback/questions/school-updates-me?edit=true",
+                href: "/leave-feedback/questions/school-updates-me?edit=true&multiple=true",
                 text: "Change",
                 visuallyHiddenText: "name"
               }
@@ -237,7 +237,24 @@ Check your answers before sending your feedback — {{ serviceName }}
         },
         {
           key: {
-            text: questions.data[12].text
+            text: "The school keeps me well informed about what my child will be learning throughout the year"
+          },
+          value: {
+            text: data["school-makes-me-aware"]
+          },
+          actions: {
+            items: [
+              {
+                href: "/leave-feedback/questions/school-makes-me-aware?edit=true&multiple=true",
+                text: "Change",
+                visuallyHiddenText: "name"
+              }
+            ]
+          }
+        },
+        {
+          key: {
+            text: "I would recommend this school to another parent"
           },
           value: {
             text: data["school-i-would-recommend"]
@@ -245,7 +262,7 @@ Check your answers before sending your feedback — {{ serviceName }}
           actions: {
             items: [
               {
-                href: "/leave-feedback/questions/school-i-would-recommend?edit=true",
+                href: "/leave-feedback/questions/school-i-would-recommend?edit=true&multiple=true",
                 text: "Change",
                 visuallyHiddenText: "name"
               }
