--- a/app/views/leave-feedback/questions/my-child-bullied-2.html
+++ b/app/views/leave-feedback/questions/my-child-bullied-2.html
@@ -4,12 +4,12 @@
 {% from "button/macro.njk" import govukButton %}
 {% from "back-link/macro.njk" import govukBackLink %}
 
-{% set pageTitle = "I am confident that if my child was bullied, the school would stop it happening" %}
+{% set pageTitle = "I’m confident that the school deals with bullying quickly and effectively" %}
 {% set questionNumber = "10" %}
-{% set questionText = "I am confident that if my child was bullied, the school would stop it happening" %}
+{% set questionText = "I’m confident that the school deals with bullying quickly and effectively" %}
 {% set questionSanitised = "my-child-bullied-2" %}
 {% set backLink = "school-good-behaviour-2" %}
-{% set nextPage = "school-my-concerns-2" %}
+{% set nextPage = "school-updates-me-2" %}
 
 {% block pageTitle %}
 {{ pageTitle }} — {{ serviceName }}
