--- a/app/views/leave-feedback/questions/my-child-can-reach-potential-2.html
+++ b/app/views/leave-feedback/questions/my-child-can-reach-potential-2.html
@@ -4,12 +4,12 @@
 {% from "button/macro.njk" import govukButton %}
 {% from "back-link/macro.njk" import govukBackLink %}
 
-{% set pageTitle = "The school does its best to ensure that my child reaches their potential" %}
+{% set pageTitle = "The school helps my child reach their full potential" %}
 {% set questionNumber = "3" %}
-{% set questionText = "The school does its best to ensure that my child reaches their potential" %}
+{% set questionText = "The school helps my child reach their full potential" %}
 {% set questionSanitised = "my-child-can-reach-potential-2" %}
 {% set backLink = "my-child-feels-safe-2" %}
-{% set nextPage = "school-makes-me-aware-2" %}
+{% set nextPage = "does-child-have-send-2" %}
 
 {% block pageTitle %}
 {{ pageTitle }} — {{ serviceName }}
