--- a/app/views/leave-feedback/questions/my-child-life-skills.html
+++ b/app/views/leave-feedback/questions/my-child-life-skills.html
@@ -4,9 +4,9 @@
 {% from "button/macro.njk" import govukButton %}
 {% from "back-link/macro.njk" import govukBackLink %}
 
-{% set pageTitle = "The school is also helping them learn life skills, such as responsibility" %}
+{% set pageTitle = "My child’s school helps them develop as a person" %}
 {% set questionNumber = "8" %}
-{% set questionText = "The school is also helping them learn life skills, such as responsibility" %}
+{% set questionText = "My child’s school helps them develop as a person" %}
 {% set questionSanitised = "my-child-life-skills" %}
 {% set backLink = "school-extracurricular-interests" %}
 {% set nextPage = "school-good-behaviour" %}
@@ -94,4 +94,3 @@
 
 
 {% endblock %}
-
