--- a/app/views/leave-feedback/questions/school-makes-me-aware.html
+++ b/app/views/leave-feedback/questions/school-makes-me-aware.html
@@ -4,12 +4,12 @@
 {% from "button/macro.njk" import govukButton %}
 {% from "back-link/macro.njk" import govukBackLink %}
 
-{% set pageTitle = "The school tells me what my child will be learning in the forthcoming term or year" %}
-{% set questionNumber = "4" %}
-{% set questionText = "The school tells me what my child will be learning in the forthcoming term or year" %}
+{% set pageTitle = "The school keeps me well informed about what my child will be learning throughout the year" %}
+{% set questionNumber = "12" %}
+{% set questionText = "The school keeps me well informed about what my child will be learning throughout the year" %}
 {% set questionSanitised = "school-makes-me-aware" %}
-{% set backLink = "my-child-can-reach-potential" %}
-{% set nextPage = "my-child-has-send" %}
+{% set backLink = "school-updates-me" %}
+{% set nextPage = "school-i-would-recommend" %}
 
 {% block pageTitle %}
 {{ pageTitle }} — {{ serviceName }}
