--- a/app/views/leave-feedback/questions/school-updates-me.html
+++ b/app/views/leave-feedback/questions/school-updates-me.html
@@ -4,12 +4,12 @@
 {% from "button/macro.njk" import govukButton %}
 {% from "back-link/macro.njk" import govukBackLink %}
 
-{% set pageTitle = "The school updates me regularly about how my child is getting on" %}
-{% set questionNumber = "12" %}
-{% set questionText = "The school updates me regularly about how my child is getting on" %}
+{% set pageTitle = "The school keeps me updated about my child’s progress" %}
+{% set questionNumber = "11" %}
+{% set questionText = "The school keeps me updated about my child’s progress" %}
 {% set questionSanitised = "school-updates-me" %}
-{% set backLink = "school-my-concerns" %}
-{% set nextPage = "school-i-would-recommend" %}
+{% set backLink = "my-child-bullied" %}
+{% set nextPage = "school-makes-me-aware" %}
 
 {% block pageTitle %}
 {{ pageTitle }} — {{ serviceName }}
