--- a/app/views/leave-feedback/questions/school-extracurricular-interests-2.html
+++ b/app/views/leave-feedback/questions/school-extracurricular-interests-2.html
@@ -4,11 +4,11 @@
 {% from "button/macro.njk" import govukButton %}
 {% from "back-link/macro.njk" import govukBackLink %}
 
-{% set pageTitle = "The school offers clubs and activities during lunchtime, before or after school" %}
+{% set pageTitle = "My child has the opportunity to attend clubs and activities during lunchtime, or before or after school" %}
 {% set questionNumber = "7" %}
-{% set questionText = "The school offers clubs and activities during lunchtime, before or after school" %}
+{% set questionText = "My child has the opportunity to attend clubs and activities during lunchtime, or before or after school" %}
 {% set questionSanitised = "school-extracurricular-interests-2" %}
-{% set backLink = "school-staff-changes-2" %}
+{% set backLink = "broad-range-subjects-2" %}
 {% set nextPage = "my-child-life-skills-2" %}
 
 {% block pageTitle %}
