--- a/app/views/leave-feedback/questions/school-i-would-recommend-2.html
+++ b/app/views/leave-feedback/questions/school-i-would-recommend-2.html
@@ -8,7 +8,7 @@
 {% set questionNumber = "13" %}
 {% set questionText = "I would recommend Greenwood High School to another parent" %}
 {% set questionSanitised = "school-i-would-recommend-2" %}
-{% set backLink = "school-updates-me-2" %}
+{% set backLink = "school-makes-me-aware-2" %}
 {% set nextPage = "additional-feedback-2" %}
 
 {% block pageTitle %}
