--- a/app/views/leave-feedback/questions/school-well-managed-2.html
+++ b/app/views/leave-feedback/questions/school-well-managed-2.html
@@ -4,12 +4,20 @@
 {% from "button/macro.njk" import govukButton %}
 {% from "back-link/macro.njk" import govukBackLink %}
 
-{% set pageTitle = "There have been a high number of teaching staff changes at the school over the last year" %}
-{% set questionNumber = "6" %}
-{% set questionText = "There have been a high number of teaching staff changes at the school over the last year" %}
-{% set questionSanitised = "school-staff-changes-2" %}
-{% set backLink = "my-child-has-send-2" %}
-{% set nextPage = "school-extracurricular-interests-2" %}
+{% set pageTitle = "The school is well led and managed" %}
+{% set questionNumber = "5" %}
+{% set questionText = "The school is well led and managed" %}
+{% set questionSanitised = "school-well-managed-2" %}
+
+{% set backLink %}
+  {% if data["does-child-have-send-2"] == "Yes" %}
+    my-child-has-send-2
+  {% elseif data["does-child-have-send-2"] == "No" %}
+    does-child-have-send-2
+  {% endif %}
+{% endset %}
+
+{% set nextPage = "broad-range-subjects-2" %}
 
 {% block pageTitle %}
 {{ pageTitle }} — {{ serviceName }}
