--- a/app/views/leave-feedback/start.html
+++ b/app/views/leave-feedback/start.html
@@ -41,19 +41,34 @@
 
     <h1 class="govuk-heading-xl">Give feedback to Ofsted about your child's school</h1>
 
-    <p class="govuk-body">Use this service to tell Ofsted what you, as a parent or carer, think about your child’s school.</p>
+    <p class="govuk-body">Use this survey to tell us about:</p>
 
-    <p class="govuk-body">This service is only for giving feedback about schools. If you have other concerns you can contact the school directly or get in touch with your local authority.</p>
+    <ul class="govuk-list govuk-list--bullet">
+      <li>
+        An experience as parent or carer- good or bad
+      </li>
+      <li>
+        As a parent or carer what you think about your child's school
+      </li>
+    </ul>
 
-    <p class="govuk-body">There are 13 questions in the feedback survey and it should take around 15 minutes to complete.</p>
+    <p class="govuk-body">There are 13 questions to complete and it should take around 15 minutes.</p>
 
-    <p class="govuk-body">By giving feedback you are helping schools raise standards. It also helps parents and carers make more informed choices about where to send their children.</p>
+    <p class="govuk-body">You can register concerns about your child's school by contacting <a class="govuk-link" href="#">Ofsted Complaints</a> or the school directly. </p>
 
     {{ govukButton({
-        text: "Start now",
-        href: "/leave-feedback/survey-code",
-        classes: "govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8"
-      }) }}
+      text: "Start now",
+      href: "/leave-feedback/survey-code",
+      classes: "govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8"
+    }) }}
+
+    <h2 class="govuk-heading-m">Before you start</h2>
+
+    <p class="govuk-body">If your school is currently going through an inspection, you will need the code provided.</p>
+
+    <p class="govuk-body">You will need to provide an email address.</p>
+
+    <p class="govuk-body">By giving feedback you are helping your child’s school to raise its standards.</p>
 
   </div>
 
